Editor reskin: implement whitespace at end of edit area (bugid:7950)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@39929 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/EditPageReskin/RTE/css/content.scss
+++ b/extensions/wikia/EditPageReskin/RTE/css/content.scss
@@ -16,6 +16,7 @@ head {
 	color: $color-text;
 	padding-left: 6px;
 	overflow-y: scroll;
+	margin-bottom: 35px;
 }
 
 /**
